--- a/code/509_Team23.ipynb
+++ b/code/509_Team23.ipynb
@@ -6,7 +6,7 @@
         "id": "sgReYw-olAfx"
       },
       "source": [
-        "__Lab Assignment 6: Topic Modeling with BERT__\n",
+        "__Team Assignment: Predicting Restaurant Business Success in Pennsylvania: A Data-Driven Approach__\n",
         "\n",
         "__Author: Ehtesham Sana__\n",
         "\n",
